json/y.output

state 0
	$accept: .J $end 

	'['  shift 5
	'{'  shift 4
	.  error

	A  goto 3
	J  goto 1
	O  goto 2

state 1
	$accept:  J.$end 

	$end  accept
	.  error


state 2
	J:  O.    (1)

	.  reduce 1 (src line 45)


state 3
	J:  A.    (2)

	.  reduce 2 (src line 47)


state 4
	O:  '{'.O_1 '}' 
	O:  '{'.'}' 

	'}'  shift 7
	STRING  shift 8
	.  error

	O_1  goto 6

state 5
	A:  '['.A_1 ']' 
	A:  '['.']' 

	'['  shift 5
	']'  shift 10
	'{'  shift 4
	STRING  shift 15
	BOOL  shift 17
	NUM  shift 16
	NULL  shift 18
	.  error

	A  goto 12
	A_1  goto 9
	V  goto 11
	VI  goto 14
	O  goto 13

state 6
	O:  '{' O_1.'}' 

	'}'  shift 19
	.  error


state 7
	O:  '{' '}'.    (4)

	.  reduce 4 (src line 54)


state 8
	O_1:  STRING.':' V 
	O_1:  STRING.':' V ',' O_1 

	':'  shift 20
	.  error


state 9
	A:  '[' A_1.']' 

	']'  shift 21
	.  error


state 10
	A:  '[' ']'.    (8)

	.  reduce 8 (src line 66)


state 11
	A_1:  V.    (9)
	A_1:  V.',' A_1 

	','  shift 22
	.  reduce 9 (src line 68)


state 12
	V:  A.    (11)

	.  reduce 11 (src line 84)


state 13
	V:  O.    (12)

	.  reduce 12 (src line 95)


state 14
	V:  VI.    (13)

	.  reduce 13 (src line 96)


state 15
	VI:  STRING.    (14)

	.  reduce 14 (src line 107)


state 16
	VI:  NUM.    (15)

	.  reduce 15 (src line 114)


state 17
	VI:  BOOL.    (16)

	.  reduce 16 (src line 115)


state 18
	VI:  NULL.    (17)

	.  reduce 17 (src line 116)


state 19
	O:  '{' O_1 '}'.    (3)

	.  reduce 3 (src line 52)


state 20
	O_1:  STRING ':'.V 
	O_1:  STRING ':'.V ',' O_1 

	'['  shift 5
	'{'  shift 4
	STRING  shift 15
	BOOL  shift 17
	NUM  shift 16
	NULL  shift 18
	.  error

	A  goto 12
	V  goto 23
	VI  goto 14
	O  goto 13

state 21
	A:  '[' A_1 ']'.    (7)

	.  reduce 7 (src line 59)


state 22
	A_1:  V ','.A_1 

	'['  shift 5
	'{'  shift 4
	STRING  shift 15
	BOOL  shift 17
	NUM  shift 16
	NULL  shift 18
	.  error

	A  goto 12
	A_1  goto 24
	V  goto 11
	VI  goto 14
	O  goto 13

state 23
	O_1:  STRING ':' V.    (5)
	O_1:  STRING ':' V.',' O_1 

	','  shift 25
	.  reduce 5 (src line 56)


state 24
	A_1:  V ',' A_1.    (10)

	.  reduce 10 (src line 75)


state 25
	O_1:  STRING ':' V ','.O_1 

	STRING  shift 8
	.  error

	O_1  goto 26

state 26
	O_1:  STRING ':' V ',' O_1.    (6)

	.  reduce 6 (src line 58)


13 terminals, 8 nonterminals
18 grammar rules, 27/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 21/120000
15 extra closures
29 shift entries, 1 exceptions
12 goto entries
7 entries saved by goto default
Optimizer space used: output 35/120000
35 table entries, 0 zero
maximum spread: 13, maximum offset: 25
